# pov

./: .gitignore  3dmath.h  CMakeLists.txt  CMakePresets.json  CODE_REVIEW.md  Doxyfile  FastNoiseLite.h  FieldSampler.h  Holosphere.code-workspace  Holosphere.ino  README.md  ShaderEffect.h  animation.h  build_debug.bat  build_release.bat  build_test.bat  build_tests.bat  canvas.h  code review.md  color.h  color_luts.h  concepts.h  constants.h  conway.h  dma_led.h  draw.h  easing.h  effects.h  effects2.h  effects_engine.h  effects_infra.h  effects_legacy.h  filter.h  generators.h  geometry.h  hankin.h  images.h  justfile  led.h  memory.cpp  (+24 more)
.agent/rules/: release-builds.md
.agents/skills/teensy-elf-analysis/: SKILL.md
.agents/skills/teensy-profiling/: SKILL.md
.claude/: settings.json
.githooks/: pre-commit  reference-transaction
.github/workflows/: ci.yml  deploy.yml  docs.yml
cmake/: toolchain-native-clang.cmake
core/: 3dmath.h  FastNoiseLite_config.h  animation.h  animation_core.h  animation_mesh.h  animation_motion.h  animation_orientation.h  animation_params.h  animation_scalars.h  animation_sprites.h  animation_timeline.h  animation_timers.h  animation_trails.h  canvas.h  color.h  color_luts.h  concepts.h  constants.h  conway.h  easing.h  effect_registry.h  effects.h  effects_engine.h  effects_legacy.h  engine.h  filter.h  generators.h  geometry.h  hankin.h  inplace_function.h  led.h  memory.cpp  memory.h  mesh.h  mesh_classes.h  palettes.h  platform.h  plot.h  presets.h  reaction_graph.cpp  (+11 more)
core/animation/: animation.h  mesh.h  motion.h  params.h  sprites.h  timeline.h  timers.h  trails.h
core/color/: color.h  color_luts.h  composition.h  gamut_lut.h  palettes.h  srgb_decode.h  srgb_decode_lut.h
core/engine/: concepts.h  constants.h  effect_registry.h  effects.h  effects_legacy.h  engine.h  generators.h  inplace_function.h  memory.cpp  memory.h  platform.h  presets.h  reaction_graph.cpp  reaction_graph.h  static_circular_buffer.h  styles.h  transformers.h  util.h
core/math/: 3dmath.h  easing.h  geometry.h  rotate.h  waves.h
core/mesh/: conway.h  conway_graph.h  hankin.h  mesh.h  mesh_classes.h  relax_bakes_generated.h  relax_bakes_manifest.json  solids.h  spatial.h
core/render/: canvas.h  filter.h  led.h  plot.h  scan.h  sdf.h  shading.h
docs/: CODE_REVIEW.md  PROJECT_ASSESSMENT.md  RAM1_AUDIT.md  code review.md  congruence_class_lut_spec.md  device_host_divergence_ledger.md  doxygen-custom.css  doxygen-theme.cfg  dreamballs_perf_analysis.md  islamicstars_next_levers.md  itcm_ledger.md  lut_compression_next.md  meshfeedback_smoke_optimization.md  phantasm_frame_sync_spec.md  phantasm_pcb_spec.md  probe_path_open_items.md  profile_displacementfield_fused_teensy_2026-07-14.md  profile_displacementfield_teensy_2026-07-15.md  segmented_stateful_effects_spec.md  selective_o3_spec.md  single_pass_mesh_raster_spec.md  strobe_columns_audit.md  teensy_ci_gate_spec.md
docs/profiles/: README.md  profile_islamicstars_pershape_teensy_2026-07-14.md
docs/profiles/O3/: README.md  profile_bzreactiondiffusion_teensy_2026-07-14.md  profile_chaoticstrings_teensy_2026-07-14.md  profile_comets_teensy_2026-07-14.md  profile_dynamo_teensy_2026-07-14.md  (+24 more)
effects/: BZReactionDiffusion.h  ChaoticStrings.h  Comets.h  CometsFieldSample.h  DisplacementField.h  DistortedRing.h  DreamBalls.h  Dynamo.h  FlamingMesh.h  FlowField.h  Flyby.h  GSReactionDiffusion.h  GnomonicStars.h  HankinSolids.h  HopfFibration.h  IslamicStars.h  LSystem.h  Liquid2D.h  MeshFeedback.h  MetaballEffect.h  Metaballs.h  MindSplatter.h  MobiusGrid.h  Moire.h  MorphBlob.h  NoiseRings.h  PetalFlow.h  Raymarch.h  ReactionDiffusionBase.h  RingShower.h  RingSpin.h  RingSpinFieldSample.h  RippleGenerator.h  ShapeShifter.h  SphericalHarmonics.h  SpinShapes.h  SplineFlow.h  Test.h  TestPlotPolygon.h  TestScanPolygon.h  (+7 more)
hardware/: dma_led.h  dma_led_controller.h  dma_led_core.h  hd107s_frame.h  pov_handoff.h  pov_segment_map.h  pov_segmented.h  pov_single.h  pov_single_map.h  pov_sync.h
hardware/phantasm/: .gitignore  README.md  fp-lib-table  phantasm.kicad_pcb  phantasm.kicad_pro  phantasm.kicad_sch  phantasm.kicad_sym  sym-lib-table
scripts/: capture_screenshots.mjs  check_effect_roster.mjs  check_screenshots.mjs  effect_roster.mjs  generate_luts.py  generate_reaction_graph.py  generate_srgb_decode.cpp  screenshot_capture_config.mjs  screenshot_capture_config.test.mjs  wasm_smoke.mjs
targets/Holosphere/: Holosphere.ino  Holosphere.sln  Holosphere.vcxproj  Holosphere.vcxproj.filters
targets/Phantasm/: Phantasm.ino
targets/Profile/: Profile.ino
targets/wasm/: mesh_marshal.h  param_marshal.h  wasm.cpp  wasm_bridge.cpp  wasm_predicates.h
tests/: CMakeLists.txt  aa_audit.h  aa_audit_main.cpp  aa_search_main.cpp  arena_measure.cpp  check_color_luts.cmake  check_color_luts_selfcheck.cmake  check_includes.cmake  fastmath_clamp_check.cpp  feedback_divergence.cpp  h_offset_renorm_check.cpp  mesh_test_util.h  perf_bench.cpp  run_tests.cpp  stack_measure.cpp  test_3dmath.h  test_animation.h  test_canvas.h  test_color.h  test_concepts.h  test_conway.h  test_conway_continuity.h  test_conway_morph.h  test_conway_soak.h  test_death.h  test_dma_controller.h  test_dma_core.h  test_easing_waves.h  test_effects.h  test_filter.h  test_fixture.h  test_generators.h  test_geometry.h  test_h_offset_renorm.h  test_hankin.h  test_harness.h  test_hd107s_frame.h  test_led.h  test_memory.h  test_mesh.h  (+24 more)
tools/: device_lock.sh  docs_check.py  gen_gamut_lut.py  parse_profile.py  phantasm.ld  profile_capture.py  profile_one.sh  profile_sweep.sh  relax_bake_check.py  relax_bakes.py  teensy_budgets.json  teensy_gate.py  teensy_gate_extra.py  teensy_isystem.py  teensy_map.py  teensy_nano.py  teensy_pre.py  teensy_size_table.py  teensy_warning_baseline.txt  teensy_warnings.py
tools/docs_check_tests/: test_docs_check.py
tools/profile_tests/: test_device_lock.py  test_parse_profile.py  test_profile_one.py
tools/relax_bake_tests/: test_relax_bakes.py
tools/teensy_gate_tests/: README.md  test_size_table.py  test_teensy_gate.py
(+63 files in other folders)
